--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cnri/mission-school",
+  "name": "@cnrikorea/mission-school",
   "version": "1.0.0",
   "main": "index.js",
   "description": "testing package publishing",
