--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@jbro249/my-cli",
   "version": "1.0.0",
   "description": "",
+  "bin": "src/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
