--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@jbro249/my-cli",
   "version": "1.0.0",
   "description": "",
-  "bin": "src/cli.js",
+  "bin": {
+    "aaa": "src/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
