--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "bin": {
     "aaa": "src/cli.js"
   },
+  "files": [
+    "src"
+  ],
   "scripts": {
+    "dev": "node src/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
