--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   },
   "author": "",
   "license": "ISC",
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "dependencies": {
+    "commander": "^11.1.0"
+  }
 }
